--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && mv public/index.html public/200.html && surge public --domain react-ts-demo.surge.sh"
+    "deploy": "npm run build && mv build/index.html build/200.html && surge build --domain react-ts-demo.surge.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
